force-app/main/default/objects/Form_Container__c/Form_Container__c.object-meta.xml
<CustomObject>
    <label>EDF Form Container</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Form Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>