force-app/main/default/objects/Form_Container__c/fields/Column_Style__c.field-meta.xml
<CustomField>
    <fullName>Column_Style__c</fullName>
    <label>Column Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OneColumn</fullName>
            </value>
            <value>
                <fullName>CustomLinks</fullName>
            </value>
            <value>
                <fullName>TwoColumnsTopToBottom</fullName>
            </value>
            <value>
                <fullName>TwoColumnsLeftToRight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>