force-app/main/default/objects/Form_Container__c/fields/Container_Key__c.field-meta.xml
<CustomField>
    <fullName>Container_Key__c</fullName>
    <formula>LOWER(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Key</label>
    <type>Text</type>
</CustomField>