force-app/main/default/objects/Form_Container__c/fields/Container_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Container_Sequence__c</fullName>
    <label>Container Sequence</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>