force-app/main/default/objects/Form_Container__c/fields/Decision_Expression__c.field-meta.xml
<CustomField>
    <fullName>Decision_Expression__c</fullName>
    <label>Decision Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>