force-app/main/default/objects/Form_Container__c/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <inlineHelpText>The where clause condition to filter the related list. Note: this isn&apos;t the EDF decision expression.</inlineHelpText>
    <label>Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>