force-app/main/default/objects/Form_Container__c/fields/Form_Container_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Container_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Form Container External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>