force-app/main/default/objects/Form_Container__c/fields/Form_Definition_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form Definition Version</label>
    <referenceTo>Form_Definition_Version__c</referenceTo>
    <relationshipName>Form_Containers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>