force-app/main/default/objects/Form_Container__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>API Name of the sobject for which the container will render the related list</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>