force-app/main/default/objects/Form_Container__c/fields/Related_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_API_Name__c</fullName>
    <inlineHelpText>The API name of the lookup field that relates the current object to the related object</inlineHelpText>
    <label>Related Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>