force-app/main/default/objects/Form_Container__c/fields/Related_List_Container__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Container__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if the container contains a related list. When checked the Form Elements under this container defines the columns in the related list</inlineHelpText>
    <label>Related List Container</label>
    <type>Checkbox</type>
</CustomField>