force-app/main/default/objects/Form_Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Definition_Version__c</columns>
    <columns>Active__c</columns>
    <columns>Title__c</columns>
    <columns>Container_Sequence__c</columns>
    <columns>Decision_Expression__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>